# Mecatro_UCL

./: .gitignore
Dynamixel/: MyFirstDynamixel.sv  UART_Dynamixel.sv
V1_pi/: CMakeLists.txt  can.cpp  can.hpp  data_robot.txt  fetch.py  main  main.cpp  makefile  mid_level.cpp  mid_level.hpp  motor_card.cpp  motor_card.hpp  pid.py  pid.txt
V1_pi/fpga/: robot.sv
V1_uavcan/: main.cpp
V1_uavcan/src/: middle_level.cpp  middle_level.hpp  motor_driver.cpp  motor_driver.hpp  pi.cpp  pi.hpp
old_minibot/: .gitignore  main.cc  readme.md
old_minibot/Gr1/: GrayCode.sv  MySPI.sv
old_minibot/IO/: CtrlStruct.cc  CtrlStruct.hh  Pipfile  bdd.py  beacon.cc  beacon.hh  fetch.py  set_output.c  setup.sh  setup_bdd.sh  speed_controller.cc  speed_controller.hh
old_minibot/back/: controllers.js  index.js  package.json  routers.js
test/: CMakeLists.txt  main.cpp
test/dsdlc_generated/motor/: EmergencyStop.hpp
test/dsdlc_generated/motor/config/: PID.hpp  PositionPID.hpp
test/src/: motor_driver.hpp
test_gcc/MyApp_Nios/: DE10_NANO_SoC_GHRD.archive.rpt  DE10_NANO_SoC_GHRD.qsf  DE10_NANO_SoC_GHRD.v  address_span_extender_0.h  f2sdram_only_master.h  fpga_only_master.h  hps_0.h  hps_0_arm_a9_0.h  hps_0_arm_a9_1.h  hps_0_bridges.h  mm_bridge_0.h  nios2_gen2_0.h  soc_system.h  soc_system.qsys  soc_system.sopcinfo
uavcan_test/: CMakeLists.txt  motor_board.cpp  node.cpp  platform_linux.cpp  publisher.cpp  server.cpp  subscriber_cpp03.cpp
uavcan_test/sirius_cybernetics_corporation/: PerformLinearLeastSquaresFit.uavcan  PointXY.uavcan
verilog_gr5/: coucou.txt
(+7744 files in other folders)
